Small cosmetic changes.

--- a/sparse.Rmd
+++ b/sparse.Rmd
@@ -98,7 +98,7 @@ You can create a sparse matrix by specifying the non-zero rows and columns.
 ```{r specify rows and columns}
 row.indices <- s@i+1
 col.indices <- j+1
-sparseMatrix(i=row.indices, j=col.indices, dims=c(2^nt-nc, 2^nc))
+sparseMatrix(i=row.indices, j=col.indices, dims=c(2^(nt-nc), 2^nc), x=1)
 ```
 
 The values stored in x: `r s@x` are all ones because in this example, all the non-zero entries are one.
