--- a/sparse.Rmd
+++ b/sparse.Rmd
@@ -7,6 +7,7 @@ output: html_document
 ---
 
 ```{r start-clean}
+# backup, just in case
 save.image("backup.RData")
 rm(list=ls())
 library("Matrix")
